--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.0.24 (closed-beta)/ @moemoe</div>
+            <div id="version" class="version">v.1.0.241 (closed-beta)/ @moemoe</div>
             <button id="play-button" class="play" onclick="togglePlay()">Play</button>
             <button id="settings-button" class="settings" onclick="toggleSettings()">Settings</button>
             <div class="settings-container" onclick="toggleSettings()"></div>
@@ -171,7 +171,7 @@
         </div>
         <button id="next-round" class="next-round">Next Round</button>
         <audio id="gameaudio" class="gameaudio" controls>
-            <source id="audioSource" type="audio/mp3" src="static/media/audio/Cosmic Sacrifice For Love.mp3">
+            <source id="audioSource" type="audio/mp3" src="static/media/audio/Anthropic Domain.mp3">
           </audio>
         <script src="static/js/play.js"></script>
         <script src="static/js/settings.js"></script>
@@ -240,25 +240,23 @@ function muffleAudio() {
 }
         </script>
         <script>
- function changeAudioSource(mapId) {
+function changeAudioSource(CountdownValue) {
   var audioSource = document.getElementById('audioSource');
   var gameAudio = document.getElementById('gameaudio');
-  
-  switch (mapId) {
-    case 0:
-      audioSource.src = 'static/media/audio/Cosmic Sacrifice For Love.mp3';
-      break;
-    case 1:
-      audioSource.src = 'static/media/audio/Space Walk.mp3';
-      break;
-    case 2:
-      audioSource.src = 'static/media/audio/Embers.mp3';
-      break;
-    case 3:
-      audioSource.src = 'static/media/audio/Anthropic Domain.mp3';
-      break;
+  var sliderValue = document.getElementById("Range").value;
+  countdownValue = parseInt(sliderValue);
+
+  if (CountdownValue <= 120) {
+    audioSource.src = 'static/media/audio/Cosmic Sacrifice For Love.mp3';
+    console.log('Setting audio source to Cosmic Sacrifice For Love.mp3');
+  } else if (CountdownValue > 120 && CountdownValue <= 300) {
+    audioSource.src = 'static/media/audio/Anthropic Domain.mp3';
+    console.log('Setting audio source to Anthropic Domain.mp3');
+  } else {
+    audioSource.src = '';
+    console.log('No matching condition. Setting audio source to empty.');
   }
-  
+
   gameAudio.load();
 }
         </script>
