--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.0.241 (closed-beta)/ @moemoe</div>
+            <div id="version" class="version">v.1.0.25 (closed-beta)/ @moemoe</div>
             <button id="play-button" class="play" onclick="togglePlay()">Play</button>
             <button id="settings-button" class="settings" onclick="toggleSettings()">Settings</button>
             <div class="settings-container" onclick="toggleSettings()"></div>
@@ -40,7 +40,7 @@
                 <div class="settings-map3" onclick="changeColor()" title="Jarilo-VI"></div>
                 <div class="settings-map4" onclick="changeColor()" title="The Xianzhou Luofu"></div>
                 <div class="settings-map5" onclick="changeColor()" title="Penacony"></div>
-                <!--Game rules-->
+                <!--Mods-->
                 <p class="settings-gamerulestext" onclick="toggleSettings">Mods</p>
                 <img src="static/media/icons/timer-outline.svg" class="settings-gamerulestimer" title="The amount of time the round will last.">
                 <div>
@@ -56,6 +56,27 @@
                 <div>
                     <input type="text" maxlength="16" placeholder="Leave blank for a random seed." class="seedinput" id="Input">
                 </div>
+                <p class="settings-filterstext" onclick="toggleSettings">Filters</p>
+                <img src="static/media/icons/contrast-outline.svg" alt="BAW" class="settings-gamerulebaw" title="Change the color of the image to black and white.">
+                <label class="baw-switch">
+                    <input type="checkbox" id="BAW">
+                    <span class="baw-slider round"></span>
+                </label>
+                <img src="static/media/icons/invert-mode-outline.svg" alt="Invert" class="settings-gameruleinvert" title="Invert the color of the image.">
+                <label class="invert-switch">
+                      <input type="checkbox" id="Invert">>
+                      <span class="invert-slider round"></span>
+                </label>
+                <img src="static/media/icons/grid-outline.svg" alt="Pixelate" class="settings-gamerulepixelate" title="Reduce visibility of the image by pixelating.">
+                <label class="pixelate-switch">
+                      <input type="checkbox" id="Pixelate">
+                      <span class="pixelate-slider round"></span>
+                </label>
+                <img src="static/media/icons/dice-outline.svg" alt="Scramble" class="settings-gamerulescramble" title="Reduce visibility of the image by slice the image and reorder them.">
+                <label class="scramble-switch">
+                      <input type="checkbox" id="Scramble">
+                      <span class="scramble-slider round"></span>
+                </label>
 
                 <img src="static/media/icons/move-outline.svg" alt="Move" class="settings-gamerulemove" title="The ability to pan around the screen.">
                 <label class="move-switch">
@@ -192,32 +213,42 @@
             console.log('Selected map:', currentMap);
             });     
         </script>
+
+        <script>
+            BAWCheckbox = document.getElementById("BAW");
+            InvertCheckbox = document.getElementById("Invert");
+            PixelateCheckbox = document.getElementById("Pixelate");
+            ScrambleCheckbox = document.getElementById("Scramble");
+
+        </script>
+
         <script>
             var audio = document.getElementById("gameaudio");
-var guessButton = document.getElementById("guessButton");
-var nextRoundButton = document.getElementById("next-round");
-var audioContext;
-var gainNode;
-var filterNode;
+            var guessButton = document.getElementById("guessButton");
+            var nextRoundButton = document.getElementById("next-round");
 
-// Function to create AudioContext after a user gesture
-function createAudioContext() {
-  // Check if AudioContext is supported
-  if (typeof window.AudioContext !== 'undefined') {
-    // Create AudioContext if it doesn't exist
-    if (!audioContext) {
-      audioContext = new AudioContext();
-      gainNode = audioContext.createGain();
-      filterNode = audioContext.createBiquadFilter();
+            var audioContext;
+            var gainNode;
+            var filterNode;
 
-      // Connect the audio element to the gain node
-      var source = audioContext.createMediaElementSource(audio);
-      source.connect(filterNode);
-      filterNode.connect(gainNode);
-      gainNode.connect(audioContext.destination);
-    }
-  }
-}
+            // Function to create AudioContext after a user gesture
+            function createAudioContext() {
+            // Check if AudioContext is supported
+            if (typeof window.AudioContext !== 'undefined') {
+                // Create AudioContext if it doesn't exist
+                if (!audioContext) {
+                audioContext = new AudioContext();
+                gainNode = audioContext.createGain();
+                filterNode = audioContext.createBiquadFilter();
+
+                // Connect the audio element to the gain node
+                var source = audioContext.createMediaElementSource(audio);
+                source.connect(filterNode);
+                filterNode.connect(gainNode);
+                gainNode.connect(audioContext.destination);
+                }
+            }
+            }
 
 guessButton.addEventListener("click", function() {
     if (guessButton.classList.contains('has-marker')) {
