--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.0.25 (closed-beta)/ @moemoe</div>
+            <div id="version" class="version">v.1.0.251 (haha nice) (closed-beta)/ @moemoe</div>
             <button id="play-button" class="play" onclick="togglePlay()">Play</button>
             <button id="settings-button" class="settings" onclick="toggleSettings()">Settings</button>
             <div class="settings-container" onclick="toggleSettings()"></div>
@@ -67,7 +67,7 @@
                       <input type="checkbox" id="Invert">>
                       <span class="invert-slider round"></span>
                 </label>
-                <img src="static/media/icons/grid-outline.svg" alt="Pixelate" class="settings-gamerulepixelate" title="Reduce visibility of the image by pixelating.">
+                <img src="static/media/icons/grid-outline.svg" alt="Pixelate" class="settings-gamerulepixelate" title="Reduce visibility of the image by blur.">
                 <label class="pixelate-switch">
                       <input type="checkbox" id="Pixelate">
                       <span class="pixelate-slider round"></span>
