--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.0.2721 (2.1#closed-beta)/ @moemoe</div>
+            <div id="version" class="version">v.1.0.2722 (2.1#closed-beta)/ @moemoe</div>
             <button id="play-button" class="play" onclick="togglePlay()">Play</button>
             <button id="settings-button" class="settings" onclick="toggleSettings()">Settings</button>
             <div class="settings-container" onclick="toggleSettings()"></div>
@@ -100,6 +100,7 @@
                 <!--kurukuru-->
                 <div id="loading-screen">
                     <img id="kurukuru" src="static/media/home/kururin.gif" alt="Kurukuru">
+                    <div id="loading-text">Loading...</div>
                 </div>
 
                 <!--Functions-->
